Fixing hidden logo overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -201,6 +201,8 @@ a {
   position: absolute;
   z-index: -10;
   opacity: 0;
+  width: 0;
+  height: 0;
 }
 
 .header-page-title {
